--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "tsc --noEmit",
+    "test": "vitest --config ./vitest.config.ts",
     "init": "tsc --init",
-    "lint": "tsc --noEmit -w"
+    "type-coverage": "type-coverage --detail --strict --debug",
+    "ts-coverage": "typescript-coverage-report",
+    "test-old": "tsd --files ./src/**/*.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "semantic-ui-react": "^2.1.5",
+    "tsd": "^0.31.2",
+    "type-coverage": "^2.29.7",
+    "typescript-coverage-report": "^1.1.0",
+    "vitest": "^2.1.5"
   }
 }
