--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "rootDir": "./src",
-  "outDir": "./dist",
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts"
+  ],
   "compilerOptions": {
-  "rootDir": "./src",
+    "rootDir": "./src",
+    "outDir": "./dist",
 
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
