--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "init": "tsc --init",
     "type-coverage": "type-coverage --detail --strict --debug",
     "ts-coverage": "typescript-coverage-report",
-    "test-old": "tsd --files ./src/**/*.ts"
+    "test-old": "tsd --files ./src/**/*.ts",
+    "coverage:upload": "codecov -f coverage/lcov.info"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.5",
+    "codecov": "^3.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "semantic-ui-react": "^2.1.5",
