--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "coverage:upload": "codecov -f coverage/lcov.info",
     "prepare": "husky install"
   },
-  "author": "",
+  "author": "Wojciech Morawski",
   "license": "ISC",
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix && npm run test",
+    "*.{ts ,md}": "prettier --write"
+  },
   "dependencies": {
     "typescript": "^5.6.3"
   },
@@ -27,9 +31,5 @@
     "prettier": "3.4.1",
     "typescript-eslint": "^8.16.0",
     "vitest": "^2.1.5"
-  },
-  "lint-staged": {
-    "*.ts": "eslint --cache --fix",
-    "*.{ts ,md}": "prettier --write"
   }
 }
